--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -6,9 +6,11 @@ layout: simple-page
 
 <h1>{{ page.title }}</h1>
 
-<p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p><br>
+<p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p>
 
 <strong>This event is invitation only. If you have received an invitation but have not yet filled out an <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3tqle6TSLTqiRUzmdbJsixYsvsEftUMakNxJyrFUwXfqQOQ/viewform?usp=sf_link">RSVP / attendee information form</a>, please do so at your earliest convenience.</strong><br>
+
+<br>
 
 <h2>Where and When</h2>
 
@@ -28,7 +30,7 @@ layout: simple-page
 
 <ul>
   <li><a href="http://hotel1868.com/">Hotel 1868</a></li>
-  <li><a href="portersquarehotel.com">Porter Square Hotel</a></li>
+  <li><a href="https://www.theportersquarehotel.com">Porter Square Hotel</a></li>
   <li><a href="https://www.thehotelveritas.com/">Hotel Veritas</a></li>
   <li><a href="http://www.afinow.com">A Friendly Inn</a></li>
 </ul>
