--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -6,7 +6,7 @@ layout: simple-page
 
 <h1>{{ page.title }}</h1>
 
-<p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p>
+<p>The Library Innovation Lab is bringing together experts who are driving the development, adoption, and regulation of AI technology as it rewires society and the law along with it.</p><br>
 
 <strong>This event is invitation only. If you have received an invitation but have not yet filled out an <a href="https://docs.google.com/forms/d/e/1FAIpQLSd3tqle6TSLTqiRUzmdbJsixYsvsEftUMakNxJyrFUwXfqQOQ/viewform?usp=sf_link">RSVP / attendee information form</a>, please do so at your earliest convenience.</strong><br>
 
