feat: Update LIL Vector copy

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -57,7 +57,8 @@ layout: simple-page
 </p>
 
 <h3>LIL Vector</h3>
-TK
+<p>lil_vector is our community server for experimenting with generative AI technology. Located in LIL space, this machine learning workstation equipped with two A6000 GPUs allows us to freely explore the potential of open-source AI models. 
+But more than a shared compute resource, it is a nascent community hub on which technologists from LIL and beyond share resources and experiments, as we collectively make sense of this AI moment.</p>
 
 <h3>Collaborative Open Legal Data (COLD) Dataset</h3>
 <p>
