feat: Update content with additional sections

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -33,17 +33,17 @@ layout: simple-page
   As this is an invitation-only gathering with an aim to create connections, we
   are sharing the guest list with all participants. This <a href="(https://docs.google.com/spreadsheets/d/1mm7HwnyaOjaE57J1K12vNb-iq5vZ7wrzmhfys7T-oFs/edit#gid=1268423724">participant
   list</a>
-  is public for attendees during the summit and then will be shared directly
-  following the event.
+  is public for attendees during the summit and will be emailed to you after the event. The participant list is not for publication.
 </p>
 
 <hr />
 
 <h2>AI Projects at LIL</h2>
+<p><strong>These projects are all in progress, if you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter.</a></strong></p>
 <p>
   Generative AI offers a defining moment where information archives gain the
   ability to answer questions about themselves; to act without human
-  intervention; and even to infer and replicate the processes that created them.
+  intervention; and even to simulate the processes that created them.
   From our perspective at the lab - where we bring library principles to
   technological frontiers - anyone who is concerned with information, access,
   and the law should be aware of and feel empowered to influence the use of
@@ -56,25 +56,11 @@ layout: simple-page
   LIL:
 </p>
 
-<h3>LIL Vector</h3>
-<p>lil_vector is our community server for experimenting with generative AI technology. Located in LIL space, this machine learning workstation equipped with two A6000 GPUs allows us to freely explore the potential of open-source AI models. 
-But more than a shared compute resource, it is a nascent community hub on which technologists from LIL and beyond share resources and experiments, as we collectively make sense of this AI moment.</p>
-
 <h3>Collaborative Open Legal Data (COLD) Dataset</h3>
 <p>
-  In 2017, the Harvard Law Library kicked off the Caselaw Access Project (CAP),
-  by digitizing 360 years of U.S. case law. The Library Innovation Lab (LIL)
-  transformed it into the largest U.S. legal database of its time. Much of this
-  data is public and discoverable for free on LIL's site
-  <a href="https://case.law">case.law.</a>
-</p>
-
-<p>
-  The legal nonprofit <a href="https://free.law/">Free Law Project</a> ingested
-  data from CAP, among other sources of similar data, to create a ever-growing
-  legal dataset and made it available on
-  <a href="http://courtlistener.com/">CourtListener.com</a> as a searchable web
-  portal, via APIs, and bulk exports from their database.
+  The legal nonprofit <a href="https://free.law/">Free Law Project</a> maintains a wide variety of web crawlers 
+to collect and publish an ever-growing dataset of public domain law at
+  <a href="http://courtlistener.com/">CourtListener.com</a>.
 </p>
 
 <p>
@@ -93,25 +79,32 @@ But more than a shared compute resource, it is a nascent community hub on which 
   experiments.
 </p>
 
-<h2>Google books</h2>
-<p>A joint project between the Library Innovation Lab and Harvard Library,
-including Library Technology Services, to compile Harvard’s Google Books data
-and publish it as a dataset that has been optimized for machine learning. In
-2005, Harvard worked with Google to scan over 1 million out-of-copyright books,
-all published before 1923. Those books have never been openly published as a
-dataset, and due to the initial agreement with Google, can only be published by
-a Harvard entity. LIL has been working with Harvard Library LTS to do just that.</p>
+<h3>One Million Books</h3>
+<p>
+  Building on our work on the COLD Dataset, we are working with the Harvard Libraries to identify more public domain datasets that can support computational research and AI experimentation for the public good. One project underway would release a large cache of digitized books and accurate metadata, in collaboration with library technologists and with researchers exploring data set consent and bias issues.
+</p>
 
-<h2>Open French Law Chatbot</h2>
-<p>This experiment explores whether an open-source LLM (Llama 2) can act as both
-translator and French law “expert” if provided with the entirety of French codes
-as “embeddings”. The case study will delve into the potential and limitations of
-open-source LLMs and associated toolchains, and to what extent embeddings models
-and vector databases can augment and “ground” the responses provided by LLMs. In
-addition, LIL will publish the embeddings database containing the entirety of
-French law.</p>
+<h3>Caselaw Access Project and the Right to Access Edicts of Law</h3>
+<p>
+  In 2017, the Harvard Law Library kicked off the Caselaw Access Project (CAP),
+  by digitizing 360 years of U.S. case law. The Library Innovation Lab (LIL)
+  transformed it into the largest U.S. legal database of its time. Much of this
+  data is public and discoverable for free on LIL's site
+  <a href="https://case.law">case.law.</a>
+</p>
 
-<h2>Library Data Trust</h2>
+<p>
+  At the end of February 2024 this collection will go fully open as a dataset structured for reading by humans and machines. We are collaborating with friends at Lexis Nexis, Fastcase, and the Free Law Project to ensure the maximum social benefit to this launch. We expect part of the launch will include a public declaration and call for a human right to access the edicts of law.
+</p>
+
+<h3>Open French Law Chatbot</h3>
+<p>This experiment explores whether an open-source LLM (Llama 2) can act as both translator and French law expert if provided with the entirety of French codes as a vector database. The case study will delve into the potential and limitations of open-source LLMs and associated toolchains, and to what extent embedding models and vector databases can augment and “ground” the responses provided by LLMs. In addition, LIL will publish the embeddings database containing the entirety of French law. 
+ </p>
+
+ <h3>Model Academic Research Agreement</h3>
+ <p>We have drafted and are seeking initial partners for a Model Academic Research Agreement, which would make it easier, faster, and safer for academic researchers to provide advice on unreleased products and models, benefiting both academia and industry.</p>
+
+<h3>Library Data Trust</h3>
 <p>Research into speculative funding structures for libraries and their
 collections. The Library Data Trust would set up a structure whereby libraries
 and archives digitized their collections and made them available for a fee to
@@ -119,7 +112,7 @@ commercial users and for free to everyone else. The goals would be to make more
 collections available to more people while securing the financial future of
 libraries.</p>
 
-<h2>LLMs and Book Ban Benchmark</h2>
+<h3>LLMs and Book Ban Benchmark</h3>
 <p>Are LLMs champions of the freedom to read? The impetus of this experiment was
 the news that an
 <a href="https://www.popsci.com/technology/iowa-chatgpt-book-ban/"
@@ -134,4 +127,12 @@ the news that an
 </a>
 </p>
 
-<p><strong>These projects are all in progress, if you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter</a>.</strong></p>
+<h3>LIL Vector</h3>
+<p>lil_vector is our community server for experimenting with generative AI technology. Located in LIL space, this machine learning server allows us to freely explore the potential of open-source AI models. </p>
+
+<p>
+  But more than a shared compute resource, it is a nascent community hub on which technologists from LIL and beyond share resources and experiments, as we collectively make sense of this AI moment. 
+</p>
+
+<h2>Harvard Library Innovation Lab AI Fund </h2>
+<p>To support this and other work, we have launched a LIL AI Fund to accept gifts and coordinate collaboration with law firms, legal technologists, foundations, and others working at the cutting edge of law, AI, libraries, and society. Contact us to discuss participation.</p>
