feat: Update content based on revisions to sections

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -58,25 +58,25 @@ layout: simple-page
 
 <h3>Collaborative Open Legal Data (COLD) Dataset</h3>
 <p>
+  Today we are proud to announce COLD Cases, a research data set to support the open law community.
+</p>
+<p>
   The legal nonprofit <a href="https://free.law/">Free Law Project</a> maintains a wide variety of web crawlers 
 to collect and publish an ever-growing dataset of public domain law at
   <a href="http://courtlistener.com/">CourtListener.com</a>.
 </p>
 
 <p>
-  The Library Innovation lab has assembled this data into a dataset suitable for
-  machine learning and made it available on
+  We have collaborated with FLP to release COLD Cases as a dataset suitable for
+  machine learning
   <a href="https://huggingface.co/datasets/harvard-lil/cold-cases"
-    >HuggingFace</a
-  >, along with a
+    >available on HuggingFace</a
+  > along with a
   <a
     href="https://datanutrition.org/labels/v3/?id=c29976b2-858c-4f4e-b7d0-c8ef12ce7dbe"
     >Data Nutrition Label</a
   >
-  which explains the source of the data and gives guidelines for ethical use.
-  The result is information about over 8 million court cases are available for
-  batch processing, for example in the context of data science and AI
-  experiments.
+  which explains the source of the data and gives guidelines for ethical use. The result is information about over 8 million court cases available for batch processing in the context of data science, AI experiments, and legal tool building.
 </p>
 
 <h3>One Million Books</h3>
