feat: Add hyphenation of words
Co-authored-by: Ben Steinberg <bsteinberg@law.harvard.edu>

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -16,7 +16,7 @@ layout: simple-page
 
 <p>
   Note: this page is for the Harvard Law AI Summit on September 19, 2023. This
-  is an invitation only event.
+  is an invitation-only event.
 </p>
 
 <h2>Recommended Readings</h2>
