--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -1,44 +1,11 @@
 ---
-title: Harvard Law AI Summit 2023
+title: AI Projects at LIL 
 slug: ai
 layout: simple-page
 ---
 
 <h1>{{ page.title }}</h1>
 
-<p>
-  <em
-    >The Library Innovation Lab is bringing together experts who are driving the
-    development, adoption, and regulation of AI technology as it rewires society
-    and the law along with it.</em
-  >
-</p>
-
-<p>
-  Note: this page is for the Harvard Law AI Summit on September 19, 2023. This
-  is an invitation-only event.
-</p>
-
-<h2>Recommended Readings</h2>
-<p>
-  We don’t have required readings, but we do have some <a href="https://docs.google.com/document/d/1XNSWdWoAQ-4_r4HzdTsGk8wJmnPB60y1Hr91Devniz4/edit#heading=h.dpq3r4f3vvga">interesting
-  suggestions</a>,
-  many of them written by conference participants. Feel free to skim and check
-  out anything that catches your eye. We will be updating the list as we receive
-  additional suggestions.
-</p>
-
-<h2>Guest List</h2>
-<p>
-  As this is an invitation-only gathering with an aim to create connections, we
-  are sharing the guest list with all participants. This <a href="https://docs.google.com/spreadsheets/d/1mm7HwnyaOjaE57J1K12vNb-iq5vZ7wrzmhfys7T-oFs/edit#gid=0">participant
-  list</a>
-  is public for attendees during the summit and will be emailed to you after the event. The participant list is not for publication.
-</p>
-
-<hr />
-
-<h2>AI Projects at LIL</h2>
 <p><strong>These projects are all in progress, if you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter.</a></strong></p>
 <p>
   Generative AI offers a defining moment where information archives gain the
@@ -49,11 +16,6 @@ layout: simple-page
   and the law should be aware of and feel empowered to influence the use of
   generative AIs. We have embarked upon a series of projects in support of that
   belief.
-</p>
-
-<p>
-  In addition to the Harvard Law AI Summit, here’s what else we’ve been up to at
-  LIL:
 </p>
 
 <h3>Collaborative Open Legal Data (COLD) Dataset</h3>
