--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -6,7 +6,7 @@ layout: simple-page
 
 <h1>{{ page.title }}</h1>
 
-<p><strong>These projects are all in progress, if you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter.</a></strong></p>
+<p><strong>These projects are all in progress. If you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter.</a></strong></p>
 <p>
   Generative AI offers a defining moment where information archives gain the
   ability to answer questions about themselves; to act without human
@@ -56,7 +56,7 @@ to collect and publish an ever-growing dataset of public domain law at
 </p>
 
 <p>
-  At the end of February 2024 this collection will go fully open as a dataset structured for reading by humans and machines. We are collaborating with friends at LexisNexis, Fastcase, and the Free Law Project to ensure the maximum social benefit to this launch. We expect part of the launch will include a public declaration and call for a human right to access the edicts of law.
+  At the end of February 2024, this collection will go fully open as a dataset structured for reading by humans and machines. We are collaborating with friends at LexisNexis, Fastcase, and the Free Law Project to ensure the maximum social benefit of this launch. We expect part of the launch will include a public declaration and call for a human right to access the edicts of law.
 </p>
 
 <h3>Open French Law Chatbot</h3>
@@ -69,7 +69,7 @@ to collect and publish an ever-growing dataset of public domain law at
 <h3>Library Data Trust</h3>
 <p>Research into speculative funding structures for libraries and their
 collections. The Library Data Trust would set up a structure whereby libraries
-and archives digitized their collections and made them available for a fee to
+and archives digitize their collections and make them available for a fee to
 commercial users and for free to everyone else. The goals would be to make more
 collections available to more people while securing the financial future of
 libraries.</p>
@@ -80,7 +80,7 @@ the news that an
 <a href="https://www.popsci.com/technology/iowa-chatgpt-book-ban/"
   > Iowa school district relied on ChatGPT’s responses to determine which books
   to remove from the library.</a> We asked five different LLMs to provide a
-  justification for removing Toni Morrison’s The Bluest Eye from library shelves
+  justification for removing Toni Morrison’s <em>The Bluest Eye</em> from library shelves
   with the objective of demonstrating how “guardrails” differ among models and
   assessing the impact of altering the temperature parameter. About 75% of the
   responses across all five LLMs justified removing the book from library
