Link to AI page from landing page.

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,13 @@ custom-scripts: ['home.js']
       </div>
     </div>
 
+    <div class="slice">
+      <h3>AI Projects</h3>
+      <div class="slice-body">
+        <p>Generative AI offers a defining moment where information archives gain the ability to answer questions about themselves; to act without human intervention; and even to simulate the processes that created them. From our perspective at the lab - where we bring library principles to technological frontiers - anyone who is concerned with information, access, and the law should be aware of and feel empowered to influence the use of generative AIs. We have embarked upon a <a href="{{ site.baseurl }}/about/ai">series of projects</a> in support of that belief.</p>
+      </div>
+    </div>
+
     <a href="{{ site.baseurl }}/about/" role="button" aria-label="Learn more about who we are"><span>Learn more about who we are</span></a>
 
   </div>
