Swap <strong> for <em> for hierarchy and to work around css bug.

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -6,7 +6,7 @@ layout: simple-page
 
 <h1>{{ page.title }}</h1>
 
-<p><strong>These projects are all in progress. If you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter.</a></strong></p>
+<p><em>These projects are all in progress. If you’d like to keep up with them please <a href="https://law.us3.list-manage.com/subscribe?u=4290964398813d739f2398db0&id=e097736c6f">subscribe to our newsletter.</a></em></p>
 <p>
   Generative AI offers a defining moment where information archives gain the
   ability to answer questions about themselves; to act without human
