--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -89,9 +89,9 @@ the news that an
 </p>
 
 <h3>Creative Writing LLMs</h3>
-<p>This year post-doc Katy Gero is working across the Library Innovation Lab and the Variation Lab at Harvard SEAS to investigate the implications of large language models in the creative writing field. Over the course of her time with us Katy will be undertaking research into what - if any - circumstances would lead literary writers to want their own work included as training data in a language model. How would they want to be credited and/or compensated? Are there restrictions on uses of the language model they would require? Are such restrictions feasible? What notion of consent is appropriate in this context?</p>
+<p>This year, post-doc Katy Gero is working at the Library Innovation Lab and the Variation Lab at Harvard SEAS to investigate the implications of large language models in the creative writing field. Over the course of her time with us Katy will be undertaking research into what - if any - circumstances would lead literary writers to want their own work included as training data in a large language model. How would they want to be credited and/or compensated? Would they require restrictions on uses of the model? Are such restrictions feasible? What notion of consent is appropriate in this context?</p>
 
-<p>She will be conducting interviews within literary communities and their adjacent fields, with a secondary goal of producing a dataset and releasing it based on the findings from contributing authors. If time allows, the data set could be used to train a Transformer model and begin investigations into the utility of such a model compared to other available models.
+<p>She will be conducting interviews within literary communities and their adjacent fields, with a secondary goal of producing a dataset and releasing it based on the findings from contributing authors. If time allows, the data set could be used to train a Transformer model and begin investigations into its utility compared to other available models.
 </p>
 
 <h3>LIL Vector</h3>
