Correct URL, one more copyedit

--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -66,7 +66,7 @@ layout: sectioned-page
         <p>
           We have collaborated with FLP to release COLD Cases as a
           data set suitable for machine
-          learning <a href="https://huggingface.co/data sets/harvard-lil/cold-cases">available
+          learning <a href="https://huggingface.co/datasets/harvard-lil/cold-cases">available
           on HuggingFace</a> along with
           a <a href="https://datanutrition.org/labels/v3/?id=c29976b2-858c-4f4e-b7d0-c8ef12ce7dbe">Data
           Nutrition Label</a> which explains the source of the data
@@ -78,7 +78,7 @@ layout: sectioned-page
 
         <h3 id="one-million-books">One Million Books</h3>
         <p>
-          Building on our work on the COLD Data Set, we are working
+          Building on our work with the COLD Data Set, we are working
           with the Harvard Libraries to identify more public domain
           data sets that can support computational research and AI
           experimentation for the public good. One project underway
