--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,20 @@ custom-scripts: ['home.js']
     </div>
 
     <div class="slice">
+      <h3>Upcoming Event</h3>
+      <div class="slice-body">
+
+
+        <p>
+          <a href="{{ site.baseurl }}/about/cap-celebration"
+            >Transform: Justice</a
+          >
+          is a call to action during an inflection point for the world of open legal data. AI is shaking up the way we all think about the power of information and data. Free, accessible, and comprehensive access to the law is foundational to our democracy, and we believe we’re in a moment when big progress can be made. Learn more here about this public event in March 2024.
+        </p>
+      </div>
+    </div>
+
+    <div class="slice">
       <h3>Democratizing Open Knowledge</h3>
       <div class="slice-body">
         <p><a href="{{ site.baseurl }}/about/democratizing-open-knowledge">Democratizing Open Knowledge</a> is a three-year program at the Library Innovation Lab to explore the goals articulated in Harvard Library’s <a href="https://library.harvard.edu/about/news/2021-03-24/harvard-library-advancing-open-knowledge">Advancing Open Knowledge</a> strategy from a decentralized and generative perspective.</p>
