Fixed Brassring link.

--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -94,7 +94,7 @@ layout: sectioned-page
         </p>
         <p>
           <b>To apply:</b>
-          <a href="https://trm128.brassring.com/Requisition/View?reqid=2000238&formtypeid=1052&reqlanguage=en&emailkey=10918&uid=^J16fjeMy2uQJWUs29Lz3IQ==&mode=^Egm*jm9susQv8bootEUNZUwYmmHtmlBC09*FRTolBuU=&responsive=true&isstatusnotificationflow=true">Application form</a>.
+          <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2000238_5341">Application form</a>.
           <em>
             In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.
           </em>
