--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -116,9 +116,8 @@ layout: sectioned-page
         </p>
         
         <p>
-          This project explores the potential 
-          and limitations of this emergent technology to improve access to law 
-          across language barriers, and will result in:
+          This project explores the potential and limitations of this emergent 
+          technology to improve access to law across language barriers, and will result in:
         </p>
 
         <ul>
