--- a/app/about/cap-celebration.html
+++ b/app/about/cap-celebration.html
@@ -54,4 +54,4 @@ layout: simple-page
 
 <h2>Contacts</h2>
 
-<p>If you have questions regarding the event please reach out to <a href="mailto:cstanton@law.harvard.edu?subject=Transform%20Justice%20Question%20">Clare Stanton.</a></p>
+<p>If you have questions regarding the event please reach out to <a href="mailto:cstanton@law.harvard.edu?subject=Transform%20Justice%20Question%20">Clare Stanton</a>.</p>
