--- a/app/about/cap-celebration.html
+++ b/app/about/cap-celebration.html
@@ -17,13 +17,24 @@ layout: simple-page
 <p>
   The Library Innovation Lab is hosting Transform: Justice at the Harvard Law
   School on March 8, 2024. A celebration of the full, unqualified release of the
-  data from the <a href="https://case.law">Caselaw Access Project</a> will be the anchor of an event focused on
-  the future of the access to law movement. Speakers across government, academia, and industry will sketch out the opportunities ahead of us for expanding access to legal data and its waterfall effects across society and justice. 
+  data from the <a href="https://case.law">Caselaw Access Project</a> will be the anchor of an event focused on the future of the access to law movement. Speakers across government, academia, and industry will sketch out the opportunities ahead of us for expanding access to legal data and its waterfall effects across society and justice. 
 </p>
-<p>
-  Transform: Justice is a call to action during an inflection point for the world of open legal data. AI is shaking up the way we all think about the power of information and data. Free, accessible, and comprehensive access to the law is foundational to our democracy, and we believe we’re in a moment when big progress can be made. 
+<p>Transform: Justice is a call to action during an inflection point for the world of open legal data. AI is shaking up the way we all think about the power of information and data. Free, accessible, and comprehensive access to the law is foundational to our democracy, and we believe we’re in a moment when big progress can be made. 
 </p>
-<p>Join us for the afternoon of March 8, 2024. Detailed schedule to come.</p>
+<h2>Schedule</h2>
+<p>Noon - 1 pm 	The Caselaw Access Project | 
+This month Harvard is releasing a trove of seven million cases from the collection of the law library. Hear how we did it and why it matters from the leaders of the project.
+Feat. Professor Jonathan Zittrain, Adam Ziegler (TrueLaw), Nik Reed (Knowable), Daniel Lewis (LegalOn) </p>
+
+<p>1 pm - 2 pm	The Future of Open Legal Data | 
+What does it take to make the law free for everybody? Hear from Mike Lissner, founder of the Free Law Project; Sara Frug, director of the Legal Information Institute; Angela Jaffee, an account director at vLex and former national programs administrator for the Administrative Office of the United States Courts; Carl Malamud, founder of Public.Resource.Org.</p>
+
+<p>2 pm - 2:30 pm	Access to Law is Access to Justice |
+The ability to know the law is a cornerstone of the larger project to build a just society.
+Remarks from Chief Justice Mark V. Green of the Massachusetts Court of Appeals and Professor Alexandra Natapoff
+</p>
+
+<p>2:30 pm - 7 pm Invite-Only Round Tables and Reception</p>
 
 <h2>Where and When</h2>
 
