--- a/app/about/cap-celebration.html
+++ b/app/about/cap-celebration.html
@@ -14,6 +14,8 @@ layout: simple-page
   </strong>
 </p>
 
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScL6MSKrXrozQBwazQYockbaSy27lsxsk9sScxMcc9m-pHBow/viewform?usp=sf_link" role="button" aria-label="RSVP Here"><span>RSVP Here</span></a>
+
 <p>
   The Library Innovation Lab is hosting Transform: Justice at the Harvard Law
   School on March 8, 2024. A celebration of the full, unqualified release of the
