Link from event page.

--- a/app/about/cap-celebration/stream.html
+++ b/app/about/cap-celebration/stream.html
@@ -11,7 +11,7 @@ slug: event-stream
 <div class="welcome">
     <p>Thank you for tuning in to Transform: Justice.</p>
 
-    <p>See the <a href="./">full programming schedule here</a>.</p>
+    <p>See the <a href="./#schedule">full programming schedule here</a>.</p>
 
     <p>If you are having trouble with the stream, please reach out to <a href="mailto:heidolon@law.harvard.edu">heidolon@law.harvard.edu</a>.</p>
 </div>
