--- a/app/about/cap-celebration/index.html
+++ b/app/about/cap-celebration/index.html
@@ -47,7 +47,7 @@ Remarks from Chief Justice Mark V. Green of the Massachusetts Court of Appeals a
 
 <h2>Live stream</h2>
 
-<p>Keynotes will also be <a href="./stream">live streamed</a>.</p>
+<p>Keynotes will also be <a href="{{ baseurl }}/about/cap-celebration/stream">live streamed</a>.</p>
 
 <h2>Directions to Campus</h2>
 
