--- a/app/about/cap-celebration/stream.html
+++ b/app/about/cap-celebration/stream.html
@@ -4,9 +4,10 @@ title: 'Stream "Transform: Justice"'
 slug: event-stream
 ---
 
-<h1 class="sr-only">Stream "Transform: Justice", March 8, 2024, Harvard Law School</h1>
-
-<img class="img-full-width" alt="" src="{{ site.baseurl }}/assets/images/transform_justice_banner.png">
+<a href="./">
+    <h1 class="sr-only">Stream "Transform: Justice", March 8, 2024, Harvard Law School</h1>
+    <img class="img-full-width" alt="" src="{{ site.baseurl }}/assets/images/transform_justice_banner.png">
+</a>
 
 <!-- This is the iframe exactly as provided by IT: swap this in if we are having trouble with the stream -->
 <!--
