--- a/app/about/cap-celebration/index.html
+++ b/app/about/cap-celebration/index.html
@@ -31,12 +31,11 @@ layout: simple-page
 This month Harvard is releasing a trove of seven million cases from the collection of the law library. Hear how we did it and why it matters from the leaders of the project.
 Feat. Professor Jonathan Zittrain, Adam Ziegler (TrueLaw), Nik Reed (Knowable), Daniel Lewis (LegalOn) </p>
 
-<p>1 pm - 2 pm	The Future of Open Legal Data | 
-What does it take to make the law free for everybody? Hear from Mike Lissner, founder of the Free Law Project; Sara Frug, director of the Legal Information Institute; Angela Jaffee, an account director at vLex and former national programs administrator for the Administrative Office of the United States Courts; Carl Malamud, founder of Public.Resource.Org.</p>
+<p>1 pm - 1:50 pm	The Future with Open Legal Data | 
+What does it take to make the law free for everybody? Hear from Mike Lissner, founder of the Free Law Project; Sara Frug, director of the Legal Information Institute; and Angela Jaffee, an account director at vLex and former national programs administrator for the Administrative Office of the United States Courts.</p>
 
-<p>2 pm - 2:30 pm	Access to Law is Access to Justice |
-The ability to know the law is a cornerstone of the larger project to build a just society.
-Remarks from Chief Justice Mark V. Green of the Massachusetts Court of Appeals and Professor Alexandra Natapoff
+<p>1:50 pm - 2:30 pm	Opportunities Ahead |
+The ability to know the law is a cornerstone of the larger project to build a just society. Remarks from Carl Malamud, founder of Public.Resource.Org; Professor Alexandra Natapoff, of Harvard Law School; and Chief Justice Mark V. Green of the Massachusetts Court of Appeals.
 </p>
 
 <p>2:30 pm - 7 pm Invite-Only Round Tables and Reception</p>
