--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@ custom-scripts: ['home.js']
                class="img-full-width">
         </figure>
         <strong class="title">Democratizing Open Knowledge</strong>
-        <span class="logline">Democratizing Open Knowledge is a three-year program at the Library Innovation Lab to explore the goals articulated in Harvard Library’s Advancing Open Knowledge strategy from a decentralized and generative perspective.</span>
+        <span class="logline">A 3 year program to explore the goals articulated in Harvard Library's Advancing Open Knowledge strategy from a decentralized and generative perspective.</span>
       </a>
 
       <a class="gallery-item" href="{{ site.baseurl }}/about/ai/">
@@ -54,7 +54,7 @@ custom-scripts: ['home.js']
                class="img-full-width">
         </figure>
         <strong class="title">AI Projects</strong>
-        <span class="logline">Generative AI offers a defining moment where information archives gain the ability to answer questions about themselves; to act without human intervention; and even to simulate the processes that created them. From our perspective at the lab - where we bring library principles to technological frontiers - anyone who is concerned with information, access, and the law should be aware of and feel empowered to influence the use of generative AIs. We have embarked upon a series of projects in support of that belief.</span>
+        <span class="logline">Projects to explore how those concerned with information, access, and the law can be aware of and feel empowered to influence the use of generative AIs.</span>
       </a>
 
       <a class="gallery-item" href="{{ site.baseurl }}/blog/">
