--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -23,6 +23,7 @@ layout: sectioned-page
           <li>
             <a href="#staff">Staff positions</a>
             <ul>
+              <li><a href="#ed">Engineering Director</a></li>
               <li><a href="#sse-fs">Senior Software Engineer</a></li>
             </ul>
           </li>
@@ -87,6 +88,18 @@ layout: sectioned-page
     <div class="slice">
       <h2 id="staff">Staff positions</h2>
       <div class="slice-body">
+        <h3 id="ed">Engineering Director</h3>
+        <p>
+          Our Engineering Director leads a team of software engineers, technologists, and academic collaborators to build open source software for both experimentation and production. The ideal candidate will be ready to mentor and support an enthusiastic and creative team; get their hands dirty solving hard technical problems; and work with the rest of LIL’s senior leadership to set goals for the organization.
+        </p>
+        <p>
+          <b>To apply:</b>
+          <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2006056_5341">Application form</a>.
+          <em>
+            In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.
+          </em>
+        </p>
+
         <h3 id="sse-fs">Senior Software Engineer &mdash; Full Stack</h3>
         <p>
           As a member of our engineering team, the Senior Software Engineer will work across our various tools, applications, and experiments to fulfill LIL's mission to bring library principles to technological frontiers. The ideal candidate will have experience building performant, testable, maintainable, and fault-tolerant products and tools at scale, for audiences both technical and non-technical.
