--- a/app/about/cap-celebration/index.html
+++ b/app/about/cap-celebration/index.html
@@ -27,14 +27,14 @@ layout: simple-page
 
 <h2 id="schedule">Schedule</h2>
 
-<p>Noon - 1 pm 	The Caselaw Access Project | 
+<p>Noon - 1 pm 	The Caselaw Access Project | <br />
 This month Harvard is releasing a trove of seven million cases from the collection of the law library. Hear how we did it and why it matters from the leaders of the project.
-Feat. Professor Jonathan Zittrain, Adam Ziegler (TrueLaw), Nik Reed (Knowable), Daniel Lewis (LegalOn) </p>
+Feat. Professor Jonathan Zittrain, Adam Ziegler (TrueLaw), Nik Reed (Knowable and LexisNexis), Daniel Lewis (LegalOn) </p>
 
-<p>1 pm - 1:50 pm	The Future with Open Legal Data | 
+<p>1 pm - 1:50 pm	The Future with Open Legal Data | <br />
 What does it take to make the law free for everybody? Hear from Mike Lissner, founder of the Free Law Project; Sara Frug, director of the Legal Information Institute; and Angela Jaffee, an account director at vLex and former national programs administrator for the Administrative Office of the United States Courts.</p>
 
-<p>1:50 pm - 2:30 pm	Opportunities Ahead |
+<p>1:50 pm - 2:30 pm	Opportunities Ahead | <br />
 The ability to know the law is a cornerstone of the larger project to build a just society. Remarks from Carl Malamud, founder of Public.Resource.Org; Professor Alexandra Natapoff, of Harvard Law School; and Chief Justice Mark V. Green of the Massachusetts Court of Appeals.
 </p>
 
