--- a/app/index.html
+++ b/app/index.html
@@ -21,13 +21,13 @@ custom-scripts: ['home.js']
     </div>
 
     <div class="slice">
-      <h3>Upcoming Event</h3>
+      <h3>Transform: Justice</h3>
       <div class="slice-body">
         <p>
           <a href="{{ site.baseurl }}/about/cap-celebration/"
             >Transform: Justice</a
           >
-          is a call to action during an inflection point for the world of open legal data. AI is shaking up the way we all think about the power of information and data. Free, accessible, and comprehensive access to the law is foundational to our democracy, and we believe we’re in a moment when big progress can be made. Learn more here about this public event in March 2024.
+          is a call to action during an inflection point for the world of open legal data. AI is shaking up the way we all think about the power of information and data. Free, accessible, and comprehensive access to the law is foundational to our democracy, and we believe we’re in a moment when big progress can be made. Learn more here about this event, held in March 2024.
         </p>
       </div>
     </div>
