hopefully fix mistake
Past commit failed tests, guessing that I probably shouldn't have changed the page title :)

--- a/app/about/cap-celebration/index.html
+++ b/app/about/cap-celebration/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Past Event - Transform: Justice"
+title: "Transform: Justice"
 slug: cap-celebration
 layout: simple-page
 ---
@@ -7,7 +7,8 @@ layout: simple-page
 <h1>{{ page.title }}</h1>
 
 <p>
-  <strong>March 8, 2024<br />
+  <strong
+    >March 8, 2024<br />
     The Harvard Law School<br />
     Cambridge, Massachusetts<br />
   </strong>
