--- a/app/about/cap-celebration/index.html
+++ b/app/about/cap-celebration/index.html
@@ -23,13 +23,13 @@ layout: simple-page
 
 <p>The Caselaw Access Project scanned the entirety of the Harvard Law School Library's physical collection of American case law and made it machine-readable in a consistent format available online. This process was funded in part by an industry partner who worked with us for the first few years post-digitization to provide access to the data to researchers and the public, rather than other commercial entities. To facilitate that agreement, the Library Innovation Lab maintained <a href="https://old.case.law">case.law</a> as the primary access point for the data in order to bring the corpus to researchers and the general public.</p>
 
-<p><strong>Learn more about the Caselaw Access Project's story in this <a href="https://vimeo.com/922493882">video we made to celebrate.</a></strong>
+<p><strong>Learn more about the Caselaw Access Project's story in this <a href="https://vimeo.com/922493882">video we made to celebrate.</a></strong></p>
 
-<p>Transform: Justice was, in part, a celebration of the full, unqualified release of the Caselaw Access Project data. Now that there is no need for metered access to the corpus, in order to create more room for our team to do exploratory work, and to consolidate efforts, we've transitioned case.law to <a href=”https://case.law”>a static state</a> and started partnerships with other organizations in the open legal data space to shepherd this data into its next phase. Thank you to the Free Law Project for all your support and collaboration.
+<p>Transform: Justice was, in part, a celebration of the full, unqualified release of the Caselaw Access Project data. Now that there is no need for metered access to the corpus, in order to create more room for our team to do exploratory work, and to consolidate efforts, we've transitioned case.law to <a href=”https://case.law”>a static state</a> and started partnerships with other organizations in the open legal data space to shepherd this data into its next phase. Thank you to the Free Law Project for all your support and collaboration.</p>
 
 <h2>Event Recordings</h2>
 
-<p>This event was live streamed and partially recorded. You can find videos of the program on <a href=”https://www.youtube.com/watch?v=VQH_GDcWANA&list=PL2q2U2nTrWq2TIUzQ4l36rl5Fpp5p5y1a”>Harvard Law School's Youtube channel.</a>
+<p>This event was live streamed and partially recorded. You can find videos of the program on <a href=”https://www.youtube.com/watch?v=VQH_GDcWANA&list=PL2q2U2nTrWq2TIUzQ4l36rl5Fpp5p5y1a”>Harvard Law School's Youtube channel.</a></p>
 
 <h2>Media Coverage</h2>
 
