Add video to cap-celebration/index.html

--- a/app/about/cap-celebration/index.html
+++ b/app/about/cap-celebration/index.html
@@ -25,6 +25,8 @@ layout: simple-page
 
 <p><strong>Learn more about the Caselaw Access Project's story in this <a href="https://vimeo.com/922493882">video we made to celebrate.</a></strong></p>
 
+<div style="max-width: 85%;  margin: auto; margin-top: 1rem; margin-bottom: 1rem; padding: 48.5% 0px 0px 0px; position:relative;"><iframe src="https://player.vimeo.com/video/922493882?h=7329f9219c" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
 <p>Transform: Justice was, in part, a celebration of the full, unqualified release of the Caselaw Access Project data. Now that there is no need for metered access to the corpus, in order to create more room for our team to do exploratory work, and to consolidate efforts, we've transitioned case.law to <a href="https://case.law">a static state</a> and started partnerships with other organizations in the open legal data space to shepherd this data into its next phase. Thank you to the Free Law Project for all your support and collaboration.</p>
 
 <h2>Event Recordings</h2>
