--- a/app/about/ai.html
+++ b/app/about/ai.html
@@ -133,7 +133,7 @@ layout: sectioned-page
         </p>
 
         <p>
-          That’s why we’re releasing OLAW, a common framework for scholarly researchers to build novel interfaces and run experiments. In technical terms, OLAW is a simple, well-documented, and extensible framework for legal AI researchers to build services using tool-based retrieval augmented generation.
+          That’s why we’re releasing OLAW, a common framework for scholarly researchers to build novel interfaces and run experiments. In technical terms, OLAW is a simple, well-documented, and extensible framework for legal AI researchers to build services using tool-based retrieval-augmented generation.
         </p>
 
         <p>
