--- a/app/idi.html
+++ b/app/idi.html
@@ -89,7 +89,7 @@ slug: idi
             <h2>Next Steps</h2>
             <div class="slice-body">
                 <p>
-                    The Institutional Data Initiative is currently engaging institutions and model-markers to join as collaborators and
+                    The Institutional Data Initiative is currently engaging institutions and model-makers to join as collaborators and
                     contributing partners as we embark on this mission. Partner institutions will work with IDI to identify promising
                     corpora within their collections for refinement and release, with the goal of accelerating and amplifying the mission
                     of those institutions at each step of the process. Likewise, model-makers will contribute data refinement expertise,
