About, Jobs, Projects, Mobile

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@ title-tag-complete: The Library Innovation Lab at Harvard University
 description: "Home of Perma.cc, H2O, Caselaw Access Project, and others. The Library Innovation Lab is growing knowledge and community by bringing library principles to technological frontiers."
 slug: home
 sharing-card-type: summary_large_image
-custom-scripts: ['home.js']
 ---
 
 <div class="pt-[16vh] pb-[26vh] flex items-center justify-center text-[9vw] leading-[100%] container">
@@ -45,9 +44,9 @@ custom-scripts: ['home.js']
     linkTwoLabel="Learn More"
   %}
   <div class="container flex flex-col gap-100">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 pb-120 border-b-1 border-black">
-      <h2 class="text-50 font-medium">Who We Are</h2>
-      <div class="md:col-span-2 text-24 leading-115 flex flex-col gap-50 pt-24">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 pb-120 border-b-1 border-black">
+      <h2 class="h2">Who We Are</h2>
+      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
         <div class="flex flex-col gap-20 max-w-[650px]">
           <p>The Library Innovation Lab is a team working at the intersection of libraries, technology, and law.</p>
           <p>Our team combines librarians, technologists, lawyers, and more to build tools and conduct research to empower more people to access and build our shared knowledge and cultural heritage.</p>
@@ -55,9 +54,9 @@ custom-scripts: ['home.js']
         {% include arrow-link.html label="Learn More About Who We Are" href="/about" %}
       </div>
     </div>
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 pb-120 border-b-1 border-black">
-      <h2 class="text-50 font-medium">Our Work</h2>
-      <div class="md:col-span-2 text-24 leading-115 flex flex-col gap-50 pt-24">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40 pb-120 border-b-1 border-black">
+      <h2 class="h2">Our Work</h2>
+      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
         <div class="flex flex-col gap-20 max-w-[650px]">
           <p>We build and explore new technology through the lens of library principles. Perma.cc, a web preservation and citation tool; H2O, an open casebook authoring and reading platform; and The Caselaw Access Project, an open database of over 6 million court opinions free and open to the public.</p>
           <p>We also conduct research to further our understanding of certain technologies and create guides for others working in our field.</p>
@@ -65,9 +64,9 @@ custom-scripts: ['home.js']
         {% include arrow-link.html label="View All Projects" href="/about" %}
       </div>
     </div>
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24">
-      <h2 class="text-50 font-medium">Contact Us</h2>
-      <div class="md:col-span-2 text-24 leading-115 flex flex-col gap-50 pt-24 flex flex-col md:grid md:grid-cols-2 gap-24 md:gap-32">
+    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+      <h2 class="h2">Contact Us</h2>
+      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24 flex flex-col md:grid md:grid-cols-2 gap-24 md:gap-32">
         <div class="flex flex-col gap-50">
           <div class="label-value">
             <h3 class="label">Email</h3>
