--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@ sharing-card-type: summary_large_image
     featured="true" 
     title="Perma.cc" 
     description="Perma.cc is a web preservation and citation tool that is changing the way lawyers, scholars, journalists, and the public preserve and cite to the web. Online content is incredibly ephemeral - it disappears anytime a website is changed or sunsetted - but we all rely on it and reference it all day, every day. Perma.cc was originally developed to ensure that legal citations of the web maintain their integrity even as the information originally cited may have since disappeared, but its utility expands far beyond the bounds of the law."
-    logo="/assets/images/perma-logo.svg"
+    logo="perma-logo.svg"
     linkOne="https://perma.cc/"
     linkOneLabel="Visit Website"
     linkTwo="/projects/perma-cc"
