--- a/app/jobs/index.html
+++ b/app/jobs/index.html
@@ -54,9 +54,9 @@ layout: sectioned-page
                 build open-source tools and services for open knowledge, available to everyone and in the public interest,
                 that solve emerging information problems from the perspective of the world's largest academic law library.
                 We currently support three long-running services (
-                  <a class="interactive-link dark" href="https://perma.cc">Perma</a>,
-                  <a class="interactive-link dark" href="https://opencasebook.org">H2O Open Casebook</a>, and the
-                  <a class="interactive-link dark" href="https://case.law">Caselaw Access Project</a>
+                  <a class="interactive-link dark reverse" href="https://perma.cc">Perma</a>,
+                  <a class="interactive-link dark reverse" href="https://opencasebook.org">H2O Open Casebook</a>, and the
+                  <a class="interactive-link dark reverse" href="https://case.law">Caselaw Access Project</a>
                 ) as well as a range of shorter-term experiments.
                 On the tech side, we work most often with Django, Vue, and Postgres.
               </p>
@@ -163,7 +163,7 @@ layout: sectioned-page
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>Our Engineering Director leads a team of software engineers, technologists, and academic collaborators to build open source software for both experimentation and production. The ideal candidate will be ready to mentor and support an enthusiastic and creative team; get their hands dirty solving hard technical problems; and work with the rest of LIL’s senior leadership to set goals for the organization.</p>
-              <p>To apply: <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2006056_5341" class="interactive-link dark">Application form</a>. In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.</p>
+              <p>To apply: <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2006056_5341" class="interactive-link dark reverse">Application form</a>. In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.</p>
             </div>
           </div>
         </lil-expandable>
@@ -178,7 +178,7 @@ layout: sectioned-page
           <div class="expandable__content">
             <div class="expandable__content--inner">
               <p>Our Engineering Director leads a team of software engineers, technologists, and academic collaborators to build open source software for both experimentation and production. The ideal candidate will be ready to mentor and support an enthusiastic and creative team; get their hands dirty solving hard technical problems; and work with the rest of LIL’s senior leadership to set goals for the organization.</p>
-              <p>To apply: <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2006056_5341" class="interactive-link dark">Application form</a>. In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.</p>
+              <p>To apply: <a href="https://sjobs.brassring.com/TGnewUI/Search/Home/Home?partnerid=25240&siteid=5341#jobDetails=2006056_5341" class="interactive-link dark reverse">Application form</a>. In addition to Harvard's standard application form, please provide a short cover letter explaining how your career trajectory and interests align with our work and mission.</p>
               </p>
             </div>
           </div>
@@ -209,8 +209,8 @@ layout: sectioned-page
                 <strong>Research Assistants:</strong> We're seeking paid research assistants with a web
                 development background to help us build open source legal
                 tech and civic tech tools
-                like <a href="/projects/perma-cc" class="interactive-link dark">Perma.cc</a>, <a href="/projects/h2o">Opencasebook.org</a>,
-                and <a href="/projects/caselaw-access-project" class="interactive-link dark">Case.law</a>.
+                like <a href="/projects/perma-cc" class="interactive-link dark reverse">Perma.cc</a>, <a href="/projects/h2o">Opencasebook.org</a>,
+                and <a href="/projects/caselaw-access-project" class="interactive-link dark reverse">Case.law</a>.
               </p>
               <p>
                 <strong>Student Fellows:</strong> We offer student fellow positions to provide mentorship to
@@ -228,7 +228,7 @@ layout: sectioned-page
               </p>
               <p>
                 <strong>To apply:</strong> send a statement of interest to
-                <a href="mailto:lil@law.harvard.edu?subject=Research%20Assistant%20position" class="interactive-link dark">lil@law.harvard.edu</a>.
+                <a href="mailto:lil@law.harvard.edu?subject=Research%20Assistant%20position" class="interactive-link dark reverse">lil@law.harvard.edu</a>.
               </p>
             </div>
           </div>
@@ -312,7 +312,7 @@ layout: sectioned-page
               </p>
               <p>
                 <strong>To apply:</strong> Email a résumé and statement of interest to
-                <a href="mailto:lil@law.harvard.edu?subject=Fellowship" class="interactive-link dark">lil@law.harvard.edu</a>.
+                <a href="mailto:lil@law.harvard.edu?subject=Fellowship" class="interactive-link dark reverse">lil@law.harvard.edu</a>.
               </p>
             </div>
           </div>
