--- a/app/contact/index.html
+++ b/app/contact/index.html
@@ -19,7 +19,7 @@ layout: sectioned-page
       <div class="flex flex-col gap-50">
         <div class="label-value">
           <h3 class="label">Email</h3>
-          <a href="mailto:lil@law.harvard.edu" class="value interactive-link dark">lil@law.harvard.edu</a>
+          <a href="mailto:lil@law.harvard.edu" class="value interactive-link dark reverse">lil@law.harvard.edu</a>
         </div>
         <div class="label-value">
           <h3 class="label">Contact us in person</h3>
@@ -28,7 +28,7 @@ layout: sectioned-page
             <span>1557 Massachusetts Avenue</span>
             <span>Cambridge, MA 02138</span>
           </address>
-          {% include arrow-link.html label="Map" href="#" target="_blank" %}
+          {% include arrow-link.html label="Map" href="#" target="_blank" reverse=true %}
         </div>
       </div>
       <div class="flex flex-col gap-32">
@@ -37,11 +37,11 @@ layout: sectioned-page
           <p class="value max-w-[330px]">
             Get updates on our latest projects and research.
           </p>
-          {% include arrow-link.html label="Sign Up" href="#" target="_blank" %}
+          {% include arrow-link.html label="Sign Up" href="#" target="_blank" reverse=true %}
         </div>
         <div class="label-value">
           <h3 class="label">GitHub</h3>
-          {% include arrow-link.html label="GitHub" href="#" target="_blank" %}
+          {% include arrow-link.html label="GitHub" href="#" target="_blank" reverse=true %}
         </div>
       </div>
     </div>
