--- a/app/projects.html
+++ b/app/projects.html
@@ -58,12 +58,12 @@ layout: sectioned-page
         <h3 class="label">AI Explorations</h3>
         <div class="grid grid-cols-2 gap-16 md:gap-24 md:col-span-2 max-w-[900px]">
           <div class="flex flex-col items-start gap-24 body-text">
-            <a href="#" class="interactive-link dark">Librarianship of AI</a>
-            <a href="#" class="interactive-link dark">Banned Books</a>
+            <a href="#" class="interactive-link dark reverse">Librarianship of AI</a>
+            <a href="#" class="interactive-link dark reverse">Banned Books</a>
           </div>
           <div class="flex flex-col items-start gap-24 body-text">
-            <a href="#" class="interactive-link dark">WARC-GPT</a>
-            <a href="#" class="interactive-link dark">French Law Chatbot</a>
+            <a href="#" class="interactive-link dark reverse">WARC-GPT</a>
+            <a href="#" class="interactive-link dark reverse">French Law Chatbot</a>
           </div>
         </div>
       </div>
@@ -71,12 +71,12 @@ layout: sectioned-page
         <h3 class="label">Perma Tools</h3>
         <div class="grid grid-cols-2 gap-16 md:gap-24 md:col-span-2 max-w-[900px]">
           <div class="flex flex-col items-start gap-24 body-text">
-            <a href="#" class="interactive-link dark">Scoop Repository</a>
-            <a href="#" class="interactive-link dark">WACZ Exhibitor</a>
+            <a href="#" class="interactive-link dark reverse">Scoop Repository</a>
+            <a href="#" class="interactive-link dark reverse">WACZ Exhibitor</a>
           </div>
           <div class="flex flex-col items-start gap-24 body-text">
-            <a href="#" class="interactive-link dark">WARC Signing</a>
-            <a href="#" class="interactive-link dark">Lorem Ipsum</a>
+            <a href="#" class="interactive-link dark reverse">WARC Signing</a>
+            <a href="#" class="interactive-link dark reverse">Lorem Ipsum</a>
           </div>
         </div>
       </div>
@@ -84,34 +84,36 @@ layout: sectioned-page
         <h3 class="label">Ongoing</h3>
         <div class="grid grid-cols-2 gap-16 md:gap-24 md:col-span-2 max-w-[900px]">
           <div class="flex flex-col items-start gap-24 body-text">
-            <a href="#" class="interactive-link dark">Century Scale Storage</a>
-            <a href="#" class="interactive-link dark">Democratizing Open Knowledge</a>
+            <a href="#" class="interactive-link dark reverse">Century Scale Storage</a>
+            <a href="#" class="interactive-link dark reverse">Democratizing Open Knowledge</a>
           </div>
           <div class="flex flex-col items-start gap-24 body-text">
-            <a href="#" class="interactive-link dark">Lorem Ipsum</a>
+            <a href="#" class="interactive-link dark reverse">Lorem Ipsum</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="container bg-gray pt-80 pb-40 flex flex-col gap-40">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
-      <h2 class="h2">Past Projects</h2>
-      <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
-        <div class="flex flex-col gap-20 max-w-[700px]">
-          <p>At the Library Innovation Lab we are also in pursuit of understanding innovation as a practice.</p>
-          <p>While not exhaustive, these are projects we have worked on, tinkered with, and ultimately sunsetted for various reasons. Each one has taught us a lesson about a particular domain, or piece of software, or community. We share lessons learned from each to be seen as case studies or used as proofs of concept for folks interested in diving deeper.</p>
+  <section class="bg-gray pt-80 pb-40">
+    <div class="container flex flex-col gap-40">
+      <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
+        <h2 class="h2">Past Projects</h2>
+        <div class="md:col-span-2 body-text flex flex-col gap-50 pt-24">
+          <div class="flex flex-col gap-20 max-w-[700px]">
+            <p>At the Library Innovation Lab we are also in pursuit of understanding innovation as a practice.</p>
+            <p>While not exhaustive, these are projects we have worked on, tinkered with, and ultimately sunsetted for various reasons. Each one has taught us a lesson about a particular domain, or piece of software, or community. We share lessons learned from each to be seen as case studies or used as proofs of concept for folks interested in diving deeper.</p>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="flex flex-col">
-      {% for project in site.projects_retired %}
-        <div class="flex flex-col gap-24 md:grid md:grid-cols-3 py-40 border-t-1 border-black first-of-type:border-t-0">
-          <h3 id="{{ project.slug }}" class="label">{{ project.title }}</h3>
-          <span class="md:col-span-2 body-text">{{ project.what_does_it_do }}</span>
-        </div>
-      {% endfor %}
+      <div class="flex flex-col">
+        {% for project in site.projects_retired %}
+          <div class="flex flex-col gap-24 md:grid md:grid-cols-3 py-40 border-t-1 border-black first-of-type:border-t-0">
+            <h3 id="{{ project.slug }}" class="label">{{ project.title }}</h3>
+            <span class="md:col-span-2 body-text">{{ project.what_does_it_do }}</span>
+          </div>
+        {% endfor %}
+      </div>
     </div>
   </section>
 </div>
